--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-gray-200 dark:bg-gray-700">
-    <div class="bg-gray-200 dark:bg-gray-700" id="app"></div>
+  <body class="bg-gradient-to-t from-emerald-400 to-emerald-100 dark:from-teal-600 dark:to-teal-500">
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
