--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nutrix App</title>
+
+    <title>Vite App</title>
   </head>
-  <body class="bg-gradient-to-t from-emerald-400 to-emerald-100 dark:from-teal-600 dark:to-teal-500">
+  <body
+    class="bg-gradient-to-t from-emerald-400 to-emerald-100 dark:from-teal-600 dark:to-teal-500"
+  >
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
