--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vite App</title>
+    <title>Nutrix App</title>
   </head>
   <body
     class="bg-gradient-to-t from-emerald-400 to-emerald-100 dark:from-teal-600 dark:to-teal-500"
